--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>鄉芋 Just to meet you</title>
+  <title>曙苗 The dawn of Miaoli agriculture</title>
 
   <style>
     body {
@@ -88,21 +88,20 @@
 <body>
 
   <header>
-    <img src="images/5.jpg" alt="Header Image">
+    <img src="images/6.jpg" alt="Header Image">
     <br/>
     <br/>
-    <h1>Welcome to Miaoli taro</h1>
+    <h1>Welcome to Miaoli</h1>
     <br/>
     <p style="font-size: 20px; color: #fff; font-weight: bold; margin-top: -30px;">「農村風華新，苗栗新活力」</p>
 
     <nav>
-      <a href="#">聯絡我們</a>
-      <a href="#">產地直銷</a>
-      <a href="https://yahsuanno2.wixsite.com/miaoli-taro/%E5%85%AC%E9%A4%A8%E8%8A%8B%E9%A0%AD%E7%89%B9%E8%89%B2"
-        target="_blank">公館芋頭特色</a>
-      <a href="#">關於我們</a>
-      <a href="#">首頁</a>
-    </nav>
+  <a href="https://yahsuanno2.wixsite.com/miaoli-taro/contact-2" target="_blank">聯絡我們</a>
+  <a href="https://yahsuanno2.wixsite.com/miaoli-taro/category/all-products" target="_blank">產地直銷</a>
+  <a href="https://yahsuanno2.wixsite.com/miaoli-taro/%E5%93%81%E7%89%8C%E6%95%85%E4%BA%8B" target="_blank">品牌故事</a>
+  <a href="https://yahsuanno2.wixsite.com/miaoli-taro/general-clean" target="_blank">本季主打</a>
+</nav>
+
   </header>
 
   <section>
